--- a/app/globals.css
+++ b/app/globals.css
@@ -108,3 +108,4 @@ a {
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import 'react-toastify/dist/ReactToastify.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
